--- a/scss/components/_head.scss
+++ b/scss/components/_head.scss
@@ -1,3 +1,27 @@
-.red {
-  color: red;
+.box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.number-column {
+  width: 130px;
+  background-color: rgb(124, 212, 124);
+  text-align: center;
+}
+.numbermax-column {
+  width: 130px;
+  background-color: rgb(124, 212, 124);
+  text-align: center;
+  margin-right: 20px;
+}
+.star-column {
+  width: 130px;
+  background-color: rgb(197, 195, 64);
+  text-align: center;
+}
+
+.starmax-column {
+  width: 130px;
+  background-color: rgb(197, 195, 64);
 }
