--- a/scss/components/_head.scss
+++ b/scss/components/_head.scss
@@ -1,3 +1,13 @@
+.box-button {
+  display: flex;
+  justify-content: center;
+}
+
+.button-number {
+  width: 100px;
+  outline: red;
+}
+
 .box {
   display: flex;
   flex-direction: row;
