--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "base/normalize";
 
 @import "components/head";
+@import "components/dmodal";
 
 @import "layout/container";
 @import "layout/navigation";
